<resources>
    <string name="app_name">Sesión 4: Ficheros</string>

    <string name="botónAñadir">Añadir</string>
    <string name="opcionVaciar">Vaciar Fichero</string>
    <string name="hintTexto">Texto a añadir</string>
    <string name="txtOnStart">Pulsa para mostrar el contenido del fichero</string>
    <string name="txtFicheroVacio">El fichero está vacío</string>
    <string name="txtErrorEscribir">No puedo escribir en la memoria externa</string>
    <string name="title_activity_ajustes">Ajustes</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="opcionAjustes">Ajustes</string>
    <string name="pref_header_almacenamiento">Opciones de Almacenamiento</string>
    <string name="opcionAjustesResumen">Opciones relativas al almacenamiento de ficheros</string>
    <string name="pref_title_almacenamiento_sd">Almacenamiento en tarjeta SD</string>
    <string name="pref_description_almacenamiento_sd">Si se activa esta opción se almacenará la información en la tarjeta SD (si está disponible)</string>
    <string name="pref_default_nombre_fichero">mi_fichero_miw.txt</string>
    <string name="pref_title_nombre_fichero">Nombre del fichero</string>
    <string name="pref_description_nombre_fichero">Nombre del fichero en el que se guardará la información</string>

</resources>
